name: botwars
version: 0.0.1
cabal-version: 1.12
license: BSD3
license-file: /home/tabemann/projects/botwars/LICENSE
stability: experimental
synopsis: A genetically-programmed robot fighting arena
description:
            A genetically-programmed robot fighting arena
build-type: Simple

executable botwars
    main-is: Main.hs
    build-depends:
                  attoparsec -any,
                  base -any,
                  cairo -any,
                  containers -any,
                  gi-cairo -any,
                  gi-gdk -any,
                  gi-glib -any,
                  gi-gtk -any,
                  haskell-gi-base -any,
                  mtl -any,
                  random -any,
                  text -any,
                  containers >=0.5.8,
                  transformers,
                  clock
    other-modules:
                  Robots.Genetic.HunterKiller.World,
                  Robots.Genetic.HunterKiller.Save,
                  Robots.Genetic.HunterKiller.Combat,
                  Robots.Genetic.HunterKiller.Params,
                  Robots.Genetic.HunterKiller.Mutate,
                  Robots.Genetic.HunterKiller.Utility,
                  Robots.Genetic.HunterKiller.Intrinsics,
                  Robots.Genetic.HunterKiller.Types,
                  Robots.Genetic.HunterKiller.Render,
                  Robots.Genetic.HunterKiller.Load,
                  Robots.Genetic.HunterKiller.VM
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -threaded

